# geo_tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  environment.yml
config/: linux-requirements.sh
src/fortran/: CMakeLists.txt  main.f90
src/fortran/modules/: physical_geodesy.f90  try1.f90
src/py/: test_legendre.py
